fixed social media icon alignment

--- a/css/style.sass
+++ b/css/style.sass
@@ -31,7 +31,7 @@ body
         color: #bbb
     .social-media
         float: right
-        margin-top: 0.25em
+        margin-top: 0.8em
 
 footer
     padding: 4em 2em
